--- a/src/Components/ProfileCard/index.css
+++ b/src/Components/ProfileCard/index.css
@@ -1,18 +1,33 @@
 
 .card {
-  border-radius: 10px;
-  width: 328px;
   border: 1px solid #000000;
+  border-radius: 10px;
+  display: flex;
+  height: 156px;
+  filter: drop-shadow(0px 4px 4px rgba(200,201,209,0.58));
+  letter-spacing: 2px;
+  margin: 20px;
+  width: 375px;
 }
 .cardHeader {
   color: #2d42ba;
   font-family: 'Karla', sans-serif;
   font-size: 22px;
+  line-height: 22px;
   text-align: left;
+  margin-bottom: 9px;
+  margin-top: 10px;
 }
 .cardBody {
   color: #93959F;
   font-size: 11px;
   text-align: left;
   text-transform: uppercase;
+  line-height: 16px;
+}
+img {
+  font-size: 11px;
+  height: 135px;
+  margin: 10px;
+  width: 100px;
 }
